--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ hr {
 
 .bg-transperent-grey {
   background: hsla(0, 0%, 25%, 0.5);;
+  box-shadow: 2px 2px 5px var(--light-color), -3px -3px 5px var(--light-color);
 }
 
 /* Text Classes */
